
	* Fixed bug  #12990 : referrer in felogin form is not encoded correctly (Thanks to Jigal van Hemert)
	
2010-05-31  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #13858: IS cannot not index files if absRefPrefix is set and indexExternalURLs is not (thanks to Christian Kuhn and Steffen Ritter for help!)

2010-05-31  Benjamin Mack  <benni@typo3.org>

	* Dropped feature #14441: Drop support for GDlib 1.x, GDlib2 is now default
	* Fixed bug #13138: Add hook for manipulating content in felogin extension (Thanks to Thomas Layh)
	* Fixed bug #14540: Replace icons in module menu to use new styles (Thanks to Steffen Gebert)
	* Fixed bug #14537: Add spinner icons for toolbar (Thanks to Steffen Gebert)
	* Fixed bug #14536: Use sprite icons in toolbar (Thanks to Steffen Gebert)
	* Fixed bug #14534: Cleanup: Icons missing in the new icon-set, and therefore sprites are updated (Thanks to Steffen Ritter)
	* Fixed bug #14535: Checkbox Alignment in TCEforms is broken (Thanks to Steffen Kamper)
	* Fixed bug #14532: SpriteIcons: Clickmenu is not replaced (Thanks to Steffen Ritter)

2010-05-30  Benjamin Mack  <benni@typo3.org>

	* Followup to #14465: Make use of the new Sprite API throughout the TYPO3 Core Backend - Missing check for directory type in class.file_list.inc (Thanks to Steffen Ritter)

2010-05-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14544: Core calls deprecated procesIncludes()
	* Fixed bug #14530: Missing icons in new BE skin (sprites) v5
	* Fixed bug #14530: Missing icons in new BE skin (sprites) v4
	* Fixed bug #14530: Missing icons in new BE skin (sprites) v3
	* Fixed bug #14530: Missing icons in new BE skin (sprites) v2
	* Fixed bug #14526: page tree filterbox styling fixed in new BE layout (Thanks to Jigal van Hemert)
	* Fixed bug #14533: SpriteIcons: Icons in db_new.php are not replaced (Thanks to Steffen Ritter)
	* Fixed bug #14530: Missing icons in new BE skin (sprites)
	* Fixed bug #14520: Css correction for template modul